fix: large text on mobile view

--- a/src/pages/SponsorUs/sponsor-us.scss
+++ b/src/pages/SponsorUs/sponsor-us.scss
@@ -5,12 +5,11 @@
 
     @media only screen and (max-width: 900px), only screen and (max-height: 640px) {
         flex-direction: column;
-
         margin: 0 auto;
     }
 
     .sponsors-content {
-        .Header {
+        header {
             font-size: 54px;
             line-height: 1.5em;
             text-align: center;
@@ -18,6 +17,10 @@
             color: black;
             font-weight: bolder;
             overflow: hidden;
+
+            @media only screen and (max-width: 420px) {
+              font-size: 36px;
+            }
         }
 
         .sponsors-section {
